css/projects.css
.project {
    background-color: #1a1a1a;
    padding: 20px;
    margin: 20px 0;
    border-radius: 10px;
    
}

.heading h2 {
    margin: 0;
    font-weight: 400;
    font-size: 1.3rem;
}

.heading {
    display: flex;
    justify-content: space-between;
}

.stack-container {
    display: flex;
    gap: 10px;
    opacity: 0.5;
}

.stack-item {
    background-color: #0f0f0f;
    padding: 5px;
    border-radius: 5px;
    height: fit-content;
}

.stack-container p {
    margin: 0;
}

@media all and (max-width:1000px) {
    .heading {
        flex-direction: column;
        align-items: center;
        gap: 10px;
    }

    .stack-container {
        flex-wrap: wrap;
        width: 100%;
        justify-content: center; 
        gap: 5px 10px;       
    }

    .project {
        margin: 10px 0;
    }
}

